--- a/src/components/weather-card/weather-card.css
+++ b/src/components/weather-card/weather-card.css
@@ -53,7 +53,7 @@
   color: black;
 }
 .card {
-  background: url("./BG.jpeg");
+  background: url("../../images/weather-card-img/BG.jpeg");
   background-position-x: right;
   background-position-y: top;
   background-repeat: no-repeat;
