--- a/src/components/city-weather-page/city-weather-page.css
+++ b/src/components/city-weather-page/city-weather-page.css
@@ -1,4 +1,4 @@
 .city_weather_page {
-  background: url("./bg.jpeg");
+  background: url("../../images/city-weather-page-img/bg.jpeg");
   height: 100vh;
 }
