--- a/src/components/search-panel/search-panel.css
+++ b/src/components/search-panel/search-panel.css
@@ -4,7 +4,7 @@
 .form_wrapper {
   padding: 20px 0;
   height: 400px;
-  background: url("./background.jpeg");
+  background: url("../../images/search-panel-img/background.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
